@@ -32,23 +32,25 @@ import TestCmd
 
 test = TestSCons.TestSCons(match = TestCmd.match_re_dotall)
 
-test.write("SConstruct","""
-b=Builder(name='b', action='foo')
-""")
-
-test.run(arguments='.', stderr=r"""
-scons: warning: The use of the 'name' parameter to Builder\(\) is deprecated\.
-File "SConstruct", line 2, in \?
-""")
-
-test.run(arguments='--warn=no-deprecated .', stderr='')
-
-test.run(arguments='--warn=no-all .', stderr='')
-
-test.run(arguments='--warn=no-all --warn=deprecated .', stderr=r"""
-scons: warning: The use of the 'name' parameter to Builder\(\) is deprecated\.
-File "SConstruct", line 2, in \?
-""")
+# How to warn about deprecated features (whenever we have one again).
+#
+#test.write("SConstruct","""
+#b=Builder(name='b', action='foo')
+#""")
+#
+#test.run(arguments='.', stderr=r"""
+#scons: warning: The use of the 'name' parameter to Builder\(\) is deprecated\.
+#File "SConstruct", line 2, in \?
+#""")
+#
+#test.run(arguments='--warn=no-deprecated .', stderr='')
+#
+#test.run(arguments='--warn=no-all .', stderr='')
+#
+#test.run(arguments='--warn=no-all --warn=deprecated .', stderr=r"""
+#scons: warning: The use of the 'name' parameter to Builder\(\) is deprecated\.
+#File "SConstruct", line 2, in \?
+#""")
 
 test.write("SConstruct","""
 def build(target, source, env):
